# search-api

./: .gitignore  agent.py  relevance_judge.ipynb
degrees/: degrees.py
search/: README.md  exa_search.py  pws_search.py  pyproject.toml  relevance_judge.ipynb
search/evals/: product_search_rubric.json
